changed the body message

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>My Webpage</title>
 </head>
 <body>
-    Hello my fellow coders...!
-    Here is another sample
+    Hello my fellow coders, my part of GIT!
 </body>
 </html>
