added another line

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>My Webpage</title>
 </head>
 <body>
-    Hello my fellow coders, my part of GIT!
+    Hello my fellow coders, my part of GIT Lesson!
 </body>
 </html>
