--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>My Webpage</title>
 </head>
 <body>
+    Hello world!
     Hello my fellow coders, my part of GIT Lesson!
 </body>
 </html>
